--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -81,11 +81,12 @@ header .showTime {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -2.5rem;
-  margin-left: -3.5rem;
+  margin-top: -3.5rem;
+  margin-left: -5rem;
   z-index: 5;
-  width: 7rem;
-  height: 5rem;
+  width: 10rem;
+  height: 7rem;
+  box-shadow: 0rem 0 .15rem rgba(0,0,0,0.2);
 }
 .mainbox .bottombox .bot .chart_box .chart img:not([src]) {
   opacity: 0;
@@ -94,7 +95,7 @@ header .showTime {
   width: 100%;
   height: 100%;
 }
-.mainbox .bottombox .bot .chart_box .map {
+/* .mainbox .bottombox .bot .chart_box .map {
   width: 100%;
   height: 100%;
   position: relative;
@@ -120,4 +121,4 @@ header .showTime {
   background-size: 100% 100%;
   background-image: url(../images/html_imgs/jt.png);
   animation: rotate 10s linear infinite;
-}
+} */
